# Pareto-Multi-Objective-RecSys

./: README.md
kuairand-like-prediction/: .gitignore  README.md  pyproject.toml  requirements.txt
kuairand-like-prediction/configs/: data.yaml  default.yaml  mmoe_amd_run.yaml
kuairand-like-prediction/docs/: DATA_ENGINEERING.md  DESIGN.md
pareto-multi-objective-recsys/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pareto-multi-objective-recsys/configs/: data.yaml  model.yaml
pareto-multi-objective-recsys/docs/: DATA_ENGINEERING.md  DESIGN.md  EXPERIMENTS.md  MODEL_ARCHITECTURE.md  PARETO_METHOD.md
pareto-multi-objective-recsys/notebooks/: README.md
pareto-multi-objective-recsys/scripts/: evaluate_model.py  generate_final_analysis.py  generate_report_assets.py  inspect_dataset.py  run_baselines.py  run_eda.py  run_pareto_rerank.py  run_predict.py  run_preprocess.py  run_train.py  smoke_check.py
pareto-multi-objective-recsys/src/: __init__.py  config.py
pareto-multi-objective-recsys/src/evaluation/: __init__.py  evaluate_predictions.py  metrics.py  ranking.py
pareto-multi-objective-recsys/src/features/: feature_registry.py
pareto-multi-objective-recsys/src/models/: __init__.py  baselines.py  custom_mmoe.py  dataset.py  encoder.py  heads.py  losses.py  train.py
pareto-multi-objective-recsys/src/rerank/: __init__.py  candidate_generation.py  pareto.py  scalarization.py
pareto-multi-objective-recsys/src/utils/: __init__.py  io.py  runner.py
pareto-multi-objective-recsys/src/visualization/: __init__.py  eda.py  report_plots.py
(+51 files in other folders)
