[tool.poetry]
name = "pareto-multi-objective-recsys"
version = "0.1.0"
description = "Multi-objective recommendation research on KuaiRand-Pure"
authors = ["Author <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
